# nat

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONVENTIONS.md  CURRENT_ISSUE_19_4_26.md  EXTENSIONS.md  FEATURES.md  HETZNER_DEPLOYMENT_PLAN.md  Makefile  PAPERS_IDEAS.md  README.md  TASKS.md  TASKS_22_05_26.md  V1_SPEC.md  critique_05_29.md  docker-compose.yml  install.sh  nat  requirements.txt  situation_analysis_18_5_2026.md  state_05_28.md  tasks_05_28.md  tasks_15_5_2026.md
rust/: Cargo.toml
rust/api/: Cargo.toml
rust/ing/: Cargo.toml
rust/ing-features/: Cargo.toml
rust/ing-types/: Cargo.toml
rust/natviz3d/: Cargo.toml
scripts/: 15m_test.py  15m_visualize.py  agent_dashboard.py  analyze_clusters.py  audit_sweep.py  backtest_funding_reversion.py  build_meta_training_data.py  check_data_sufficiency.py  check_deferred_triggers.py  config_utils.py  dashboard.py  discovery_orchestrator.py  evaluate_wave1_gate.py  evaluate_wave2_gate.py  experiment_governance.py  experiment_tracking.py  health_snapshot.sh  list_models.py  logging_config.py  ml_health_check.py  ml_rollback.py  model_serving.py  monitor.py  nat_paths.py  nightly_report.py  oos_terminal.py  oos_validate.py  phase1_signal_test.py  pipeline_runner.py  promotion_daemon.py  provenance.py  pyproject.toml  q3_predictive_quality.py  requirements-exploration.txt  requirements-serving.txt  run_backtest.py  run_backtest_tracked.py  run_experiment.py  run_ing.sh  run_ml_verification.sh  (+24 more)
scripts/agent/: README.md  __init__.py  arxiv_reader.py  base.py  cache.py  cascade_daemon.py  code_synth.py  daemon.py  feedback.py  gates.py  hypothesis.py  hypothesis_queue.py  llm_client.py  macro_daemon.py  macro_runner.py  manifest.py  meta_daemon.py  meta_portfolio.py  mf_daemon.py  mf_runner.py  queue.py  research_output.py  runner.py  state_machine.py
scripts/algorithms/: __init__.py  autodiscover.py  base.py  bipower_jump.py  calibrate_warmup.py  cascade_probability.py  change_point_detector.py  convolver.py  convolver_kernels.py  ensemble.py  entropy_momentum.py  evaluate.py  funding_reversion.py  funding_settlement.py  hawkes_intensity.py  hierarchical_combiner.py  jump_detector.py  kalman_imbalance.py  knn_retrieval.py  mean_reversion_detector.py  meta_labeling.py  momentum_continuation.py  multi_level_imb.py  oi_divergence.py  online_ridge.py  optimal_entry.py  propagator.py  regime_conditioned_lgbm.py  regime_gated.py  regime_retune.py  regime_state_machine.py  registry.py  runner.py  signal_adapter.py  spread_decomp.py  surprise_signal.py  switching_ou.py  trade_through.py  vol_squeeze.py  vpin_regime.py  (+1 more)
scripts/alpha/: adapter.py  alpha_pipeline.py  combiner.py  deployer.py  multi_freq.py  oos_window.py  overnight_sweep.py  paper_trader.py  paper_trader_daily.py  paper_trader_generic.py  paper_trader_surprise.py  portfolio.py  position.py  regime_filter.py  screener.py
scripts/analysis/: convolver_discovery.py  cross_symbol_edge.py  cross_symbol_edge_v2.py  funding_carry.py  it_multiday.py  it_multiday_ic.py  mf_hypothesis_suite.py  mf_liquidity_backtest.py  oos_hypothesis_test.py  rare_events.py  signal_correlation.py
scripts/backtest/: __init__.py  algorithm_strategy.py  costs.py  data_loader.py  engine.py  ml_strategy.py  requirements.txt  strategy.py  walk_forward.py
scripts/cli/: agent.py  alg1.py  algorithm.py  alpha.py  api.py  app.py  audit.py  backtest.py  cluster.py  common.py  config.py  control.py  data.py  deploy.py  discovery.py  docker.py  eamm.py  evolve.py  exp.py  experiment.py  fetch.py  gauntlet.py  health.py  kalman.py  lifecycle.py  macro.py  metrics.py  model.py  nightly.py  oos.py  ops.py  package.py  pipeline.py  process.py  profile.py  report.py  reports.py  scan.py  screen.py  signal.py  (+8 more)
scripts/cluster_pipeline/: __init__.py  characterize.py  cluster.py  config.py  derivatives.py  hierarchy.py  loader.py  online.py  preprocess.py  reduce.py  reduction.py  report.py  transitions.py  validate.py  viz.py
scripts/cluster_quality/: __init__.py  composite.py  metrics.py  stability.py  validation.py
scripts/data/: __init__.py  __main__.py  catalog.py  features.py  fetch_candles.py  macro.py  schema.py  state.py
scripts/eamm/: __init__.py  __main__.py  backtest.py  cli.py  evaluate.py  export.py  features.py  labels.py  regime_analysis.py  simulator.py  train.py
scripts/execution/: hyperliquid_client.py  signal_bridge.py
scripts/experiment/: events.py  metrics.py  monitor.py  profiler.py  server.py  state.py
scripts/exploration/: audit_aggregate.py  audit_sweep.py  backtest_funding_reversion.py  explore_clusters.py  generate_report.py  q3_predictive_quality.py  scalp_edge_scanner.py  scalping_profiler.py  skeptical_regression_test.py  skeptical_validation.py  spannung_backtest.py  spannung_grid.py  spannung_horizon_sweep.py  spannung_regime_screener.py  spannung_spectral.py  visualize_profiling.py  visualize_scanner.py
scripts/features/: __init__.py  har_rv.py  microprice.py  multilevel_ofi.py  realized_moments.py  settlement_clock.py
scripts/it_engine/: config.py  daemon.py  estimators.py  feature_selector.py  state.py
scripts/kalman/: __init__.py  analysis.py  drift_analysis.py  fill_sim.py  limit_order_sim.py  ou_filter.py
scripts/monitoring/: __init__.py  metrics_exporter.py
scripts/ops/: __init__.py  gap_alert.py  systemd_units.py
scripts/polymarket/: __init__.py  backtest.py  client.py  edge_detector.py  market_scanner.py  probability_model.py
scripts/processes/: __init__.py  base.py  ic_horizon.py  info_theory.py  labeling.py  ml_importance.py  pca_combo.py  persistence.py  registry.py  runner.py  spectral.py  synthetic.py
scripts/risk/: __init__.py  kill_switch.py
scripts/strategies/: base.py  funding_reversion.py  macro_micro.py  relative_value_pairs.py  scalp.py
scripts/swarm/: __init__.py  config_generator.py  evaluator.py  optuna_optimizer.py  orchestrator.py  parquet_reader.py
scripts/tests/: conftest.py  test_15m_test.py  test_agent_base.py  test_agent_cache.py  test_agent_dashboard.py  test_agent_ensemble.py  test_agent_monitor.py  (+127 more)
(+633 files in other folders)
