[project]
name = "nat-research"
version = "0.1.0"
requires-python = ">=3.12"
description = "NAT quantitative research platform — Python modules"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agent*",
    "alpha*",
    "algorithms*",
    "backtest*",
    "data*",
    "execution*",
    "it_engine*",
    "utils*",
]
