[package]
name = "nat-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NAT API Server - REST and WebSocket endpoints for feature consumption"

[lib]
name = "nat_api"
path = "src/lib.rs"

[[bin]]
name = "nat-api"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
anyhow.workspace = true
axum.workspace = true
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Web framework extras
tower = "0.4"

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "aio"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"

# HTTP client for Telegram API
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[[bin]]
name = "alert-service"
path = "src/bin/alert_service.rs"
