[package]
name = "nat-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NAT API Server - REST and WebSocket endpoints for feature consumption"

[lib]
name = "nat_api"
path = "src/lib.rs"

[[bin]]
name = "nat-api"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
anyhow.workspace = true
axum.workspace = true
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Web framework extras
tower = "0.4"

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "aio"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
ordered-float.workspace = true

# HTTP client for Telegram API
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Config parsing
toml = "0.8"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.21"
tokio-test = "0.4"

[[bin]]
name = "alert-service"
path = "src/bin/alert_service.rs"
