[package]
name = "ing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Hyperliquid market data ingestor with feature extraction"

[lib]
name = "ing"
path = "src/lib.rs"

[[bin]]
name = "ing"
path = "src/main.rs"

[[bin]]
name = "validate_api"
path = "src/bin/validate_api.rs"

[[bin]]
name = "validate_positions"
path = "src/bin/validate_positions.rs"

[[bin]]
name = "validate_whales"
path = "src/bin/validate_whales.rs"

[[bin]]
name = "validate_entropy"
path = "src/bin/validate_entropy.rs"

[[bin]]
name = "show_features"
path = "src/bin/show_features.rs"

[[bin]]
name = "measure_frequency"
path = "src/bin/measure_frequency.rs"

[[bin]]
name = "test_hypotheses"
path = "src/bin/test_hypotheses.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
arrow.workspace = true
parquet.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
ordered-float.workspace = true
rustc-hash.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
axum.workspace = true
tower-http.workspace = true

# Additional crate-specific dependencies
url = "2.5"
ring_buffer = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "features"
harness = false
